MOSIP-42448 - Stabilized inji mobile testrig (#2055)
* MOSIP-42448 - Stabilized inji mobile testrig

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

* MOSIP-42448 - Updated the POM and git ignore

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

---------

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>